Make query executors return iterators instead of streams